syntax = "proto3";

package tellery.grpc;
option java_package = "io.tellery.grpc";
option java_outer_classname = "TelleryConnectorProto";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "displayType.proto";
import "sqlType.proto";

service ConnectorService {
  rpc GetDatabases (google.protobuf.Empty) returns (Databases);
  rpc GetCollections (GetCollectionRequest) returns (Collections);
  rpc GetCollectionSchema (GetCollectionSchemaRequest) returns (Schema);
  rpc Query (SubmitQueryRequest) returns (stream QueryResult);
  rpc ImportFromFile (ImportRequest) returns (ImportResult);
}

message GetCollectionRequest {
  string database = 1;
}

message GetCollectionSchemaRequest {
  string database = 1;
  string collection = 2;
  string schema = 3;
}

message SubmitQueryRequest {
  string sql = 1;
  string questionId = 2;
  int32 maxRow = 3;
}

message ImportRequest {
  string database = 1;
  string collection = 2;
  string schema = 3;
  string url = 4;
}

message SchemaField {
  string name = 1;
  display.DisplayType displayType = 2;
  types.SQLType sqlType = 3;
}

message Schema {
  repeated SchemaField fields = 1;
}

message Databases {
  repeated string database = 1;
}

message CollectionField {
  string collection = 1;
  oneof schemaExists {
    string schema = 2;
  }
}

message Collections {
  repeated CollectionField collections = 2;
}

message QueryResult {
  oneof current {
    Schema fields = 1;
    bytes row = 2;
    bool truncated = 3;
  }
}

message ImportResult {
  string database = 1;
  string collection = 2;
  oneof schemaExists {
    string schema = 3;
  }
}
